--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.1.1",
     "typeface-lato": "0.0.75",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -46,7 +50,9 @@
   },
   "devDependencies": {
     "@types/google-map-react": "^1.1.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.2"
   }
 }
